queda arreglar el home

--- a/html/index.html
+++ b/html/index.html
@@ -7,25 +7,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
     <link rel="stylesheet" href="../css/main.css">
+
+    <!--Este es el CDN de fontawesome 4.7 que trae las clases necesarias para íconos de redes sociales: -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
     <header>
-        <section>
-            <div>
-                <a href="">face</a>
-                <a href="">twitte</a>
-                <a href="">instra</a>
-                <a href="">linkied</a>
-                <a href="">yt</a>
+        <section class="header-icons-container">
+            <div class="icons">
+                <a href="" class="fa fa-facebook"></a>
+                <a href="" class="fa fa-twitter"></a>
+                <a href="" class="fa fa-instagram"></a>
+                <a href="" class="fa fa-linkedin"></a>
+                <a href="" class="fa fa-youtube"></a>
             </div>
         </section>
-
-        <nav>
-            <section> <a href="">Logo</a> </section>
-            <section> <a href="">Sobre mi</a> </section>
-        </nav>
     </header>
+
+    <main>
+
+
+        <section class="main-image-container">
+            <img src="/assets/img/indexImage.png" alt="imagen del home index">
+        </section>
+
+
+        <section class="nav-logo-container">
+            <a href="/"><img src="../assets/img/indexImage.png" alt="Logo de tech"></a>
+        </section>
+
+        <section class="profile-link"> <a href="">Sobre mi</a> </section>
+
+
+        <section class="main-container">
+            <h1 class="main-container-title">TITLE</h1>
+            <p class="main-container-title-description">DESCRIPTION</p>
+            <button class="main-container-button">BUTTON ENTER HERE</button>
+
+        </section>
+
+    </main>
 
 
 </body>
