falta arreglar algunas cositas

--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,9 @@
 
     <!--Este es el CDN de fontawesome 4.7 que trae las clases necesarias para íconos de redes sociales: -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
 
 </head>
 
@@ -28,24 +31,20 @@
 
     <main>
 
-
         <section class="main-image-container">
             <img src="/assets/img/indexImage.png" alt="imagen del home index">
         </section>
 
-
         <section class="nav-logo-container">
-            <a href="/"><img src="../assets/img/indexImage.png" alt="Logo de tech"></a>
+            <img src="../assets/img/indexImage.png" alt="Logo de tech">
         </section>
 
-        <section class="profile-link"> <a href="">Sobre mi</a> </section>
-
+        <section class="profile-link"> <a href="/">Sobre mi</a> </section>
 
         <section class="main-container">
             <h1 class="main-container-title">TITLE</h1>
-            <p class="main-container-title-description">DESCRIPTION</p>
-            <button class="main-container-button">BUTTON ENTER HERE</button>
-
+            <p class="main-container-title-description">description</p>
+            <button class="main-container-button" href="blogs.html">BUTTON ENTER HERE</button>
         </section>
 
     </main>
