--- a/html/index.html
+++ b/html/index.html
@@ -36,7 +36,7 @@
         </section>
 
         <section class="nav-logo-container">
-            <img src="../assets/img/indexImage.png" alt="Logo de tech">
+            <img src="../assets/img/Logo-negro.png" alt="Logo de tech">
         </section>
 
         <section class="profile-link"> <a href="/">Sobre mi</a> </section>
@@ -44,7 +44,7 @@
         <section class="main-container">
             <h1 class="main-container-title">TITLE</h1>
             <p class="main-container-title-description">description</p>
-            <button class="main-container-button" href="blogs.html">BUTTON ENTER HERE</button>
+            <button class="main-container-button"> <a href="/">BUTTON ENTER HERE</a></button>
         </section>
 
     </main>
