--- a/html/blogs.html
+++ b/html/blogs.html
@@ -31,71 +31,32 @@
 
     <main>
 
-        <section class="nav-logo-container">
-            <img src="../assets/img/Logo-negro.png" alt="Logo de tech">
-        </section>
+        <div class="nav-logo">
+            <section class="nav-logo-container">
+                <img src="../assets/img/Logo-negro.png" alt="Logo de tech">
+            </section>
 
-        <section class="profile-link"> <a href="/">Sobre mi</a> </section>
-
-        <div>
-            <h3></h3>
-            <article>
-                <img src="" alt="">
-                <p></p>
-                <p></p>
-                <a href=""></a>
-            </article>
+            <section class="profile-link"> <a href="/">Sobre mi</a> </section>
         </div>
 
-        <div>
-            <h3></h3>
-            <article>
-                <img src="" alt="">
-                <p></p>
-                <p></p>
-                <a href=""></a>
-            </article>
+        <div class="blogs-news">
+            <section class="blogs-news-container">
+                <div class="blogs-main-new">
+                    <h3>Soy un titulo</h3>
+                    <div class="blogs-news-img-container">
+                        <img src="../assets/img/main-news-img.png" alt="">
+                    </div>
+                    <div class="blogs-news-info-container">
+                        <h2>Título del blogpost</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam vero veniam officiis? Error magnam numquam accusantium inventore officiis magni explicabo ratione consequatur, dolor nesciunt delectus necessitatibus, in placeat
+                            deleniti animi.
+                        </p>
+                        <a href="" class="blogs-button"></a>
+                    </div>
+                </div>
+            </section>
         </div>
 
-        <div>
-            <h3></h3>
-            <article>
-                <img src="" alt="">
-                <p></p>
-                <p></p>
-                <a href=""></a>
-            </article>
-        </div>
-
-        <div>
-            <h3></h3>
-            <article>
-                <img src="" alt="">
-                <p></p>
-                <p></p>
-                <a href=""></a>
-            </article>
-        </div>
-
-        <div>
-            <h3></h3>
-            <article>
-                <img src="" alt="">
-                <p></p>
-                <p></p>
-                <a href=""></a>
-            </article>
-        </div>
-
-        <div>
-            <h3></h3>
-            <article>
-                <img src="" alt="">
-                <p></p>
-                <p></p>
-                <a href=""></a>
-            </article>
-        </div>
     </main>
 
 
