--- a/html/blogs.html
+++ b/html/blogs.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
     <link rel="stylesheet" href="../css/blogs.css">
+    <link rel="stylesheet" href="../css/mediaquery.css">
 
     <!--Este es el CDN de fontawesome 4.7 que trae las clases necesarias para íconos de redes sociales: -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
