--- a/html/perfil.html
+++ b/html/perfil.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mi Blog</title>
     <link rel="stylesheet" href="../css/perfil.css">
+    <link rel="stylesheet" href="../css/mediaquery.css">
 
     <!--Este es el CDN de fontawesome 4.7 que trae las clases necesarias para íconos de redes sociales: -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
